@@ -1,3 +1,7 @@
+2008-11-25  Arno Rehn  <arno@arnorehn.de>
+
+	* Try initializing the smoke modules when creating a SmokeInvocation instance.
+
 2008-10-25  Arno Rehn  <arno@arnorehn.de>
 
 	* Use List<IQGraphicsItem> instead of List<QGraphicsItem> and check for
